feat: inclusão da funcionalidade de pagina ativa na nav-bar

--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -25,9 +25,6 @@
       opacity: 1;
     }
   </style>
-
-
-
 </head>
 
 <body>
@@ -41,7 +38,7 @@
           <main>
             <div class="row mt-5">
               <div class="col-md-12">
-                <h2 class="text-center text-success mb-4">Pesquisa Avançada de Estoque</h2>
+                <h2 class="text-center text-success mb-3 fw-bold">Pesquisa Avançada de Estoque</h2>
                 <form id="pesquisa-form">
                   <div class="row">
                     <div class="col-md-12 mb-3">
