feat: criação da tabela de itens pagos

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,6 +8,7 @@
         <form class="d-flex align-items-center w-100">
           <a href="/entrada" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Entrada</a>
           <a href="/saida" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Saída</a>
+          <a href="/estoque/itenspagos" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Tabela de saída</a>
           <a href="/tabela" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Tabela</a>
           <a href="/relatorios" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Relatórios</a>
           <a href="/historico-movimentacao-page" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Histórico</a>
