--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,21 +2,21 @@
   <div class="container-fluid">
     <div class="d-flex justify-content-between w-100 mx-5">
       <div class="col-auto mt-1">
-        <a class="navbar-brand text-white" href="/tabela">CEGPA / Controle de Estoque</a>
+        <a class="navbar-brand text-white" href="/painel">CEGPA / Controle de Estoque</a>
       </div>
       <div class="col-auto d-flex align-items-center">
         <form class="d-flex align-items-center w-100">
-          <a href="/entrada" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Entrada</a>
-          <a href="/saida" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Saída</a>
-          <a href="/estoque/itenspagos" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Tabela de saída</a>
-          <a href="/tabela" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Tabela</a>
-          <a href="/relatorios" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Relatórios</a>
-          <a href="/historico-movimentacao-page" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Histórico</a>
-          <a href="/pesquisa-avancada-page" class="btn btn-outline-light mx-2 w-100 btn-adm fw-bold">Pesquisa</a>
+          <a href="/entrada" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Entrada</a>
+          <a href="/saida" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Saída</a>
+          <a href="/tabela/estoqueatual" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Estoque Atual</a>
+          <a href="/estoque/itenspagos" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Ítens Saídos</a>
+          <a href="/relatorios" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Relatórios</a>
+          <a href="/historico-movimentacao-page" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Histórico</a>
+          <a href="/pesquisa-avancada-page" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Pesquisa</a>
         </form>
       </div>
       <div class="col-auto mt-1">
-        <a href="/logout" class="btn btn-danger mx-2 w-100 btn-adm fw-bold">Sair</a>
+        <a style="border: 1px solid #fff;" href="/logout" class="btn btn-danger mx-2 w-100 btn-header fw-bold">Sair</a>
       </div>
     </div>
   </div>
