--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -1,159 +1,219 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        <%= title %>
-    </title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Sistema de Controle de Estoque - COLOG</title>
     <style>
-        .container-principal {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #131313;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            overflow: hidden;
         }
 
-        .container-painel {
-            background-color: #1a1a1a;
-            min-height: 50vh;
-            width: 80%;
-            max-width: 900px;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+
+        .header-content {
+            background: linear-gradient(to right, #00621D, #0BA23D);
+            padding: 20px 0 30px 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 20px;
-            padding: 30px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            border-radius: 12px;
-            border: 5px solid rgba(0, 255, 127, 0.3);
-            box-shadow: 0 0 10px rgba(0, 255, 127, 0.4);
-            animation: subtle-neon 5s infinite alternate;
+            color: white;
         }
 
-        @keyframes subtle-neon {
-            from {
-                border-color: rgba(0, 255, 127, 0.3);
-                box-shadow: 0 0 10px rgba(0, 255, 127, 0.4), 0 0 20px rgba(0, 255, 127, 0.2);
-            }
 
-            to {
-                border-color: rgba(0, 255, 127, 0.5);
-                box-shadow: 0 0 15px rgba(0, 255, 127, 0.6), 0 0 25px rgba(0, 255, 127, 0.3);
-            }
+        .logo {
+            width: 500px;
+            margin-bottom: 10px;
         }
 
-        .container-painel h1 {
-            color: #e1e1e1;
-      
-        }
-
-        .area-painel {
+        .systems-grid {
             display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            width: 100%;
-            box-shadow: 0 0 15px rgba(0, 255, 127, 0.3);
-            padding: 1rem;
-            border-radius: 10px;
-          
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+            padding: 30px;
+            cursor: pointer;
         }
 
-        .btn-painel,
-        .btn-op {
-            font-size: 1.1rem;
-            padding: 10px 20px;
-            border: 2px solid transparent;
-            border-radius: 8px;
-            transition: background-color 0.3s ease, border-color 0.3s ease;
+        .system-box {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            height: 150px;
+            transition: transform 0.2s, box-shadow 0.2s;
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .system-box:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .system-box h4,
+        .system-box p {
+            margin: 0;
+            color: inherit;
+        }
+
+        .system-box p {
+            margin: 0;
+        }
+
+        .footer-content {
+            border-top: 4px solid #00621D;
+            color: #00621D;
+            text-align: center;
+            padding: 10px 0;
             width: 100%;
+            position: fixed;
+            bottom: 0;
+        }
+
+        .footer-content a {
+            color: #FFFFF0;
+            text-decoration: none;
+        }
+
+        .container-white {
+            border-bottom: 4px solid orange;
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 70px;
+            position: sticky;
+            background-color: #fff;
+            top: 0;
+            width: 100%;
+            z-index: 10;
+            padding: .5rem;
+        }
+
+        .container-white {
+            margin-top: -30px;
+
+        }
+
+        h3 {
+            font-size: 1.5rem;
+            font-weight: 700;
             margin: 0;
+        }
+
+        h4 {
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin: 0;
+        }
+
+        footer h4{
+            font-size: 1.4rem;
+            padding-top: 1rem;
+            margin-bottom: 0.3rem;
+        }
+
+        /* footer p:last-child {
+            margin-top: 0.2rem;
+        } */
+
+        h5{
             font-size: 1.2rem;
-            color: #ffffff;
-     
-        }
-
-        .btn-painel {
-            background-color: #2c2c2c;
-            border-radius: 10px;
-            border-color: #333232;
-            transition: all 300ms ease-in-out;
-        }
-
-        .btn-painel:hover {
-            color: #10b981;
-            border-color: rgba(0, 255, 127, 0.6);
-            transition: 300ms;
-        }
-
-        .btn-op {
-            background-color: #2c2c2c;
-            border-color: #333232;
-            color: #ffffff;
-            transition: all 300ms ease-in-out;
-        }
-
-        .btn-op:hover {
-            border-color: rgba(0, 255, 127, 0.6);
-            color: #10b981;
-            transition: 300ms;
-        }
-
-        .painel{
-            background-color: #262626;
-            border-radius: 10px;
-            grid-column: span 2;
-            padding: 1rem;
+            font-weight: 500;
+            margin: 0;
             
         }
-      
-        .button-formularios {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-        }
 
-        .button-formularios a {
-            flex: 1 1 calc(50% - 15px);
+        main {
+            margin-top: 30px;
         }
     </style>
 </head>
 
 <body>
-    <div class="container-principal">
-        <div class="container-painel">
-            <h1 class="mb-3">Painel de Controle</h1>
-            <div class="area-painel">
-                <div class="painel">
-                    <div class="button-formularios">
-                        <a href="/entrada" class="btn btn-painel">Formulário de Entrada</a>
-                        <a href="/saida" class="btn btn-painel">Formulário de Saída</a>
-                    </div>
-                </div>
-                <div class="painel">
-                    <div class="button-formularios">
-                        <a href="/tabela/estoqueatual" class="btn btn-op">Estoque Atual</a>
-                        <a href="/estoque/itenspagos" class="btn btn-op">Itens Pagos</a>
-                        <a href="/relatorios" class="btn btn-op">Relatórios</a>
-                        <a href="/pesquisa-avancada-page" class="btn btn-op">Pesquisa Avançada</a>
-                        <a href="/historico-movimentacao-page" class="btn btn-op">Histórico de Entradas / Saídas</a>
-                    </div>
-                </div>
+    <header>
+        <div class="row">
+            <div class="header-content container-fluid me-auto">
+                <img src="https://sistemas.pm.ce.gov.br/img/PM-SSPDSclara.png" alt="Polícia Militar Logo" class="logo">
             </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+02M/aZjcJgAY+R7l9vwoPI93V7jK"
-        crossorigin="anonymous"></script>
+
+        <div class="container-white container">
+            <h3>Painel de Controle</h3>
+        </div>
+
+    </header>
+
+    <main class="container bg-light border ">
+        <div class="systems-grid">
+            <a href="/entrada" class="system-box link">
+                <div>
+                    <h4>Formulário de Entrada</h4>
+                    <p>Formulário de Entrada</p>
+                </div>
+            </a>
+            <a href="/saida" class="system-box link">
+                <div>
+                    <h4>Formulário de Saída</h4>
+                    <p>Formulário de Saída</p>
+                </div>
+            </a>
+            <a href="/tabela/estoqueatual" class="system-box link">
+                <div>
+                    <h4>Tabela do Estoque Atual</h4>
+                    <p>Estoque Atual</p>
+                </div>
+            </a>
+            <a href="/estoque/itenspagos" class="system-box link">
+                <div>
+                    <h4>Tabela dos Itens que Sairam do estoque</h4>
+                    <p>Itens Pagos</p>
+                </div>
+            </a>
+            <a href="/relatorios" class="system-box link">
+                <div>
+                    <h4>Relatório de quantidade</h4>
+                    <p>Relatórios</p>
+                </div>
+            </a>
+            <a href="/pesquisa-avancada-page" class="system-box link">
+                <div>
+                    <h4>Pesquisas</h4>
+                    <p>Pesquisa Avançada</p>
+                </div>
+            </a>
+            <a href="/historico-movimentacao-page" class="system-box link">
+                <div>
+                    <h4>Histórico Geral</h4>
+                    <p>Histórico de Entradas / Saídas</p>
+                </div>
+            </a>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <h4 class=" mt-3">COLOG - Comando Logistico da PMCE</h4>
+            <h5 class="mb-0 fw-bold">CEGPA / NUCPA</h5>
+            <p class="m-0">R. Carlos Araújo, S/N - Olavo Oliveira</p>
+            <p class="">Fone: 85 3101.3570 / 3101.3571 - E-mail: informatica@policiamilitar.ce.gov.br <br>
+                Horário de funcionamento: <br>De segunda a sexta de 8h às 12h e de 13h às 16:30hs</p>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
