--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg py-3 navbar-light bg-success d-flex justify-content-between">
+<nav class="navbar navbar-expand-lg py-3 navbar-light  d-flex justify-content-between">
   <div class="container-fluid ">
     <div class="d-flex justify-content-between w-100 mx-5">
       <div class="col-auto mt-1">
@@ -21,6 +21,12 @@
     </div>
   </div>
 </nav>
+
+<style>
+  .navbar{
+    background: linear-gradient(to right, #00621D, #0BA23D);
+  }
+</style>
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
